Properties for nuget, README update, target both net6 and net7

--- a/RqliteNet/RqliteNet.csproj
+++ b/RqliteNet/RqliteNet.csproj
@@ -1,9 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
+	<PropertyGroup>
+		<PackageId>RqliteNet</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Szczepan</Authors>
+		<Title>RqliteNet</Title>
+		<Description>.NET library to use rqlite</Description>
+		<PackageTags>rqlite client library</PackageTags>
+		<PackageProjectUrl>https://github.com/sec/rqlite-net</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/sec/rqlite-net.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="..\LICENSE" Pack="true" PackagePath="\" />
+	</ItemGroup>
 </Project>
