--- a/Orleans.Persistence.RqliteNet/Orleans.Persistence.RqliteNet.csproj
+++ b/Orleans.Persistence.RqliteNet/Orleans.Persistence.RqliteNet.csproj
@@ -6,6 +6,20 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<PackageId>Orleans.Persistence.RqliteNet</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Szczepan</Authors>
+		<Title>Orleans.Persistence.RqliteNet</Title>
+		<Description>.NET library to use rqlite with Orleans</Description>
+		<PackageTags>rqlite client library orleans grain persistence storage</PackageTags>
+		<PackageProjectUrl>https://github.com/sec/rqlite-net</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/sec/rqlite-net.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Orleans.Server" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
@@ -13,6 +27,8 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\RqliteNet\RqliteNet.csproj" />
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="..\LICENSE" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
