--- a/RqliteNet.AspNet/RqliteNet.AspNet.csproj
+++ b/RqliteNet.AspNet/RqliteNet.AspNet.csproj
@@ -1,14 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <OutputType>Library</OutputType>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<OutputType>Library</OutputType>
+		<IsPackable>true</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\RqliteNet\RqliteNet.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<PackageId>RqliteNet.AspNet</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Szczepan</Authors>
+		<Title>RqliteNet.AspNet</Title>
+		<Description>.NET library to use rqlite with ASP.NET</Description>
+		<PackageTags>rqlite client library asp.net</PackageTags>
+		<PackageProjectUrl>https://github.com/sec/rqlite-net</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/sec/rqlite-net.git</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+		<None Include="..\LICENSE" Pack="true" PackagePath="\" />
+	</ItemGroup>	
+
+	<ItemGroup>
+		<ProjectReference Include="..\RqliteNet\RqliteNet.csproj" />
+	</ItemGroup>
 
 </Project>
